...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Tasting Sessions" id="mlX-i8-9cc">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="zIa-Dd-Ok4">
                            <connections>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Session Name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Jt-Q3-AFP">
                                <rect key="frame" x="24" y="76" width="122" height="21"/>
                                <constraints>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GdC-Mc-qcA">
                                <rect key="frame" x="24" y="159" width="114" height="21"/>
                                <constraints>
...
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8rn-5T-eJS">
                                <rect key="frame" x="24" y="109" width="327" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="sessionName"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="WnV-3Q-Fpr"/>
...
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6Mh-SL-f00">
                                <rect key="frame" x="24" y="188" width="327" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="sessionLocation"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="iha-zy-Zzp"/>
...
                                                    </constraints>
                                                    <userDefinedRuntimeAttributes>
                                                        <userDefinedRuntimeAttribute type="color" keyPath="filledColor">
                                                            <color key="value" red="0.3411764705882353" green="0.28235294117647058" blue="0.32156862745098036" alpha="1" colorSpace="calibratedRGB"/>
                                                        </userDefinedRuntimeAttribute>
...
                                        <connections>
                                            <outlet property="rating" destination="yx7-T8-vXk" id="BYZ-l2-KcO"/>
                                            <outlet property="wine" destination="XQz-0t-cpL" id="hAh-1b-A52"/>
                                        </connections>
                                    </tableViewCell>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fWA-gR-oTf">
                                <rect key="frame" x="279" y="231" width="72" height="30"/>
                                <state key="normal" title="Add Notes"/>
                                <connections>
                                    <action selector="addNotes:" destination="Ai3-CA-JcG" eventType="touchUpInside" id="3C3-Ox-GGI"/>
...
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Session Details" id="r64-aQ-1vo">
                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="la0-T5-9IC">
                            <connections>
                                <action selector="cancel:" destination="Ai3-CA-JcG" id="Cpe-6e-mZS"/>
...
                                                        <constraint firstAttribute="height" constant="30" id="f52-N1-2El"/>
                                                    </constraints>
                                                    <state key="normal" title="Grapes"/>
                                                    <connections>
                                                        <segue destination="gVJ-P8-13r" kind="presentation" identifier="showGrapes" id="FVP-MV-7Xo"/>
...
                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CL4-bs-30L">
                                                    <rect key="frame" x="124" y="7" width="221" height="30"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="summary"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="30" id="zCW-C8-h8T"/>
...
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Save" id="E1K-LE-yiY">
                            <connections>
                                <action selector="save:" destination="ugl-w2-53E" id="MiT-QK-rOv"/>
...
                        <outlet property="color" destination="juL-9X-cen" id="KAb-by-OV3"/>
                        <outlet property="conclusion" destination="CL4-bs-30L" id="HIg-Gf-OCb"/>
                        <outlet property="country" destination="gAY-ny-LHa" id="1wU-qX-1f6"/>
                        <outlet property="grapeCount" destination="i2X-m2-WrY" id="JMs-RI-cLU"/>
                        <outlet property="grapes" destination="SVS-U4-IZP" id="3rg-ig-WDO"/>
...
                        <outlet property="price" destination="Mat-6G-LQn" id="fel-dQ-Scs"/>
                        <outlet property="rating" destination="5UC-Sy-pOQ" id="zoZ-3f-BSo"/>
                        <outlet property="region" destination="7Vh-H5-WV1" id="KJ5-cF-Zp2"/>
                        <outlet property="tasteAcidity" destination="sg8-GU-GAD" id="V5B-ZE-uzd"/>
                        <outlet property="tasteBody" destination="8cZ-9S-yFr" id="RIE-St-aku"/>
...
                        <outlet property="type" destination="fJ3-jl-Hf7" id="oZS-5G-3ac"/>
                        <outlet property="wineName" destination="QMO-wu-gM0" id="hxl-5n-O3P"/>
                        <outlet property="year" destination="XTL-DW-pNv" id="6KW-oE-CAe"/>
                        <outletCollection property="searchFields" destination="juL-9X-cen" collectionClass="NSMutableArray" id="xbB-YY-mJJ"/>
                        <outletCollection property="searchFields" destination="fJ3-jl-Hf7" collectionClass="NSMutableArray" id="WUy-mJ-PT6"/>
...
