...
    func tableView(_ tableView: UITableView, didSelectRowAt indexPath: IndexPath) {
        grapeStore.selectedRecord = indexPath
        let note = sessionStore.note()
        var percent: Int16 = 0
       
        if !grapeStore.isLinkedToNote(note) {
            let alertController = UIAlertController(title: "Add Grape", message: nil, preferredStyle: .alert)
            alertController.addTextField { (textField) -> Void in
                textField.placeholder = "percentage"
                textField.keyboardType = .numberPad
            }
            
            let okAction = UIAlertAction(title: "OK", style: .default) {_ -> Void in
                if let text = alertController.textFields?.first?.text {
                    if let number = Int16(text) {
                        percent = number
                    }
                }
                self.grapeStore.linkToNote(note, percent: percent)
...
